@@ -8534,7 +8534,7 @@ void CLASS adobe_coeff (const char *t_make, const char *t_model)
     { "Olympus E-PM2", 0, 0,
 	{ 8380,-2630,-639,-2887,10725,2496,-627,1427,5438 } },
     { "Olympus E-M10", 0, 0,
-	{ 8380,-2630,-639,-2887,10725,2496,-627,1427,5438 } },
+        { 9697,-3911,-397,-1228,9565,1057,-475,1487,4396 } },
     {"Olympus E-M1", 0, 0,
         { 11663,-5527,-419,-1683,9915,1389,-582,1933,5016 } },
     { "Olympus E-M5", 0, 0xfe1,
@@ -8703,8 +8703,10 @@ void CLASS adobe_coeff (const char *t_make, const char *t_model)
 	{ 6763,-1919,-863,-3868,11515,2684,-1216,2387,5879 } },
     {"Panasonic DMC-GX7",143,0,
         {7541,-2355,-591,-3163,10598,1894,-933,2109,5006}},
-    { "Panasonic DMC-TZ61", 143, 0,	/* DJC */
-	{ 6211,-2325,27,-3800,9449,4352,-943,2166,6293 } },
+    {"Panasonic DMC-TZ60",141, 0,
+     { 15964,-8332,-389,1756,7198,383,862,784,1995 } },
+    {"Panasonic DMC-TZ61",141, 0,
+     { 15964,-8332,-389,1756,7198,383,862,784,1995 } },
     { "Phase One H 20", 0, 0,		/* DJC */
 	{ 1313,1855,-109,-6715,15908,808,-327,1840,6020 } },
     { "Phase One H 25", 0, 0,
